--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboardgeneral.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboardgeneral.html
@@ -4,7 +4,7 @@
     <title>${TitleServer}</title>
 </head>
 <body>
-    <div id="dashboardGeneralPage" data-role="page" class="page type-interior dashboardHomePage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Server%20Settings" data-require="scripts/dashboardgeneral,paper-textarea">
+    <div id="dashboardGeneralPage" data-role="page" class="page type-interior dashboardHomePage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Server%20Settings" data-require="scripts/dashboardgeneral,paper-textarea,paper-input">
 
         <div data-role="content">
             <div class="content-primary">
