--- a/MediaBrowser.WebDashboard/dashboard-ui/syncjob.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncjob.html
@@ -4,7 +4,7 @@
     <title>${TitleSync}</title>
 </head>
 <body>
-    <div id="syncJobPage" data-role="page" class="page type-interior syncConfigurationPage syncJobPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Sync" data-require="jqmcontrolgroup,scripts/syncjob,paper-fab">
+    <div id="syncJobPage" data-role="page" class="page type-interior syncConfigurationPage syncJobPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Sync" data-require="jqmcontrolgroup,scripts/syncjob,paper-fab,paper-item-body">
 
         <div data-role="content">
             <div class="content-primary">
