update dependency loading

--- a/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/selectserver.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="selectServerPage" data-role="page" class="page libraryPage noSecondaryNavPage" data-theme="b" data-require="scripts/selectserver,paper-fab,paper-item-body">
+    <div id="selectServerPage" data-role="page" class="page libraryPage noSecondaryNavPage" data-theme="b" data-require="scripts/selectserver,paper-fab,paper-item-body,paper-icon-item">
 
         <div data-role="content">
 
