--- a/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
@@ -30,7 +30,7 @@
                     <div>
                         <div id="fldNewImage">
                             <p>${ImageUploadAspectRatioHelp}</p>
-                            <input type="file" accept="image/*" id="uploadUserImage" name="uploadUserImage" onchange="MyProfilePage.onFileUploadChange(this);" />
+                            <input type="file" accept="image/*" id="uploadUserImage" name="uploadUserImage" />
 
                             <div id="userImageDropZone" class="imageDropZone">
                                 <h3>${LabelDropImageHere}</h3>
@@ -100,7 +100,7 @@
                             <button type="submit" data-role="none" class="clearButton">
                                 <paper-button raised class="submit block"><iron-icon icon="check"></iron-icon><span>${ButtonSave}</span></paper-button>
                             </button>
-                            <paper-button id="btnResetEasyPassword" style="display:none;" raised class="cancel block" onclick="UpdatePasswordPage.resetEasyPassword();"><iron-icon icon="lock"></iron-icon><span>${ButtonResetEasyPassword}</span></paper-button>
+                            <paper-button id="btnResetEasyPassword" raised class="cancel block hide" onclick="UpdatePasswordPage.resetEasyPassword();"><iron-icon icon="lock"></iron-icon><span>${ButtonResetEasyPassword}</span></paper-button>
                         </div>
                     </div>
                 </div>
