--- a/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
@@ -14,7 +14,7 @@
                 <div style="vertical-align:top;margin: .5em 0 0 1em;display:inline-block;">
                     <h2 class="username" style="margin: 0;"></h2>
                     <br />
-                    <paper-button raised class="cancel" id="btnDeleteImage"><iron-icon icon="delete"></iron-icon><span>${ButtonDeleteImage}</span></paper-button>
+                    <paper-button raised class="cancel hide" id="btnDeleteImage"><iron-icon icon="delete"></iron-icon><span>${ButtonDeleteImage}</span></paper-button>
                 </div>
             </div>
 
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             </form>
-            <form class="localAccessForm localAccessSection userProfileSettingsForm" style="margin: 0 auto;">
+            <form class="localAccessForm localAccessSection userProfileSettingsForm" style="margin: 0 auto;display:none;">
                 <div class="detailSection">
                     <h1>
                         ${HeaderEasyPinCode}
