--- a/MediaBrowser.WebDashboard/dashboard-ui/music.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/music.html
@@ -13,7 +13,7 @@
                 <paper-tab>${TabArtists}</paper-tab>
                 <paper-tab>${TabSongs}</paper-tab>
                 <paper-tab>${TabGenres}</paper-tab>
-                <paper-tab>${TabFolders}</paper-tab>
+                <paper-tab class="hide">${TabFolders}</paper-tab>
             </paper-tabs>
             <div class="legacyTabs scopedLibraryViewNav">
                 <a href="music.html">${TabSuggestions}</a>
@@ -22,7 +22,7 @@
                 <a href="music.html?tab=3">${TabArtists}</a>
                 <a href="music.html?tab=4">${TabSongs}</a>
                 <a href="music.html?tab=5">${TabGenres}</a>
-                <a href="music.html?tab=6">${TabFolders}</a>
+                <a href="music.html?tab=6" class="hide">${TabFolders}</a>
             </div>
         </div>
 
