--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceslanguages.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceslanguages.html
@@ -34,6 +34,7 @@
                             <label for="selectSubtitlePlaybackMode">${LabelSubtitlePlaybackMode}</label>
                             <select id="selectSubtitlePlaybackMode" data-mini="true">
                                 <option value="Default">${OptionDefaultSubtitles}</option>
+                                <option value="Smart">${OptionSmartSubtitles}</option>
                                 <option value="OnlyForced">${OptionOnlyForcedSubtitles}</option>
                                 <option value="Always">${OptionAlwaysPlaySubtitles}</option>
                                 <option value="None">${OptionNoSubtitles}</option>
