update path substitution page

--- a/MediaBrowser.WebDashboard/dashboard-ui/librarypathmapping.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/librarypathmapping.html
@@ -38,7 +38,7 @@
                         <div>
                             <label for="txtFrom">${LabelFrom}</label>
                             <input id="txtFrom" type="text" required="required" data-mini="true" />
-                            <div class="fieldDescription">${LabelFromHelp}</div>
+                            <div class="fieldDescription labelFromHelp"></div>
                         </div>
                         <br />
                         <div>
