add Indonesian as selectable language
Conflicts:
	MediaBrowser.Server.Implementations/MediaBrowser.Server.Implementations.csproj

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesdisplay.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesdisplay.html
@@ -37,6 +37,7 @@
                                 <option value="el">Greek</option>
                                 <option value="he">Hebrew</option>
                                 <option value="hu">Hungarian</option>
+                                <option value="id">Indonesian</option>
                                 <option value="it">Italian</option>
                                 <option value="kk">Kazakh</option>
                                 <option value="nb">Norwegian Bokmål</option>
