make auto saving conditional

--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceshome.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferenceshome.html
@@ -138,6 +138,10 @@
                     </div>
 
                 </div>
+                <button type="submit" data-role="none" class="clearButton block btnSave hide">
+                    <paper-button raised class="submit block"><iron-icon icon="check"></iron-icon><span>${ButtonSave}</span></paper-button>
+                </button>
+
                 <p>
                     <span style="color:#52B54B;margin-left:.5em;margin-right:.5em;">*</span><span>${LegendTheseSettingsShared}</span>
                 </p>
