--- a/MediaBrowser.WebDashboard/dashboard-ui/reports.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/reports.html
@@ -66,7 +66,7 @@
                                 <option value="200">200</option>
                                 <option value="300">300</option>
                                 <option value="500">500</option>
-                                <option value="400">400</option>
+                                <option value="10000">10000</option>
                             </select>
                             <br />
                         </div>
@@ -105,6 +105,9 @@
 
                             <input class="chkStandardFilter" type="checkbox" name="chkIsFavorite" id="chkIsFavorite" data-filter="IsFavorite">
                             <label for="chkIsFavorite">${OptionFavorite}</label>
+
+                            <input class="chkStandardFilter" type="checkbox" name="chkIsNotFavorite" id="chkIsNotFavorite" data-filter="IsNotFavorite">
+                            <label for="chkIsNotFavorite">Not ${OptionFavorite}</label>
 
                             <input class="chkStandardFilter" type="checkbox" name="chkLikes" id="chkLikes" data-filter="Likes">
                             <label for="chkLikes">${OptionLikes}</label>
