add IMDB, TMDB and TVDB missing filters

--- a/MediaBrowser.WebDashboard/dashboard-ui/reports.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/reports.html
@@ -131,6 +131,15 @@
 
                                 <input class="chkYearMismatch" type="checkbox" name="chkYearMismatch" id="chkYearMismatch">
                                 <label for="chkYearMismatch">${OptionFileMetadataYearMismatch}</label>
+
+                                <input class="chkMissingImdbId" type="checkbox" name="chkMissingImdbId" id="chkMissingImdbId">
+                                <label for="chkMissingImdbId">${OptionMissingImdbId}</label>
+
+                                <input class="chkMissingTmdbId" type="checkbox" name="chkMissingTmdbId" id="chkMissingTmdbId">
+                                <label for="chkMissingTmdbId">${OptionMissingTmdbId}</label>
+
+                                <input class="chkMissingTvdbId" type="checkbox" name="chkMissingTvdbId" id="chkMissingTvdbId">
+                                <label for="chkMissingTvdbId">${OptionMissingTvdbId}</label>
                             </div>
                         </div>
                         <fieldset data-role="collapsible" data-collapsed="true" data-mini="true" id="GroupStatus">
