update recording delete

--- a/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
@@ -83,7 +83,7 @@
                                             <input type="hidden" id="featureName" name="item_name" value="">
                                             <input type="hidden" id="amount" name="amount" value="10">
                                             <input type="hidden" id="featureId" name="item_number" value="">
-                                            <input type="hidden" name="notify_url" value="http://mb3admin.com/admin/service/services/ppipn.php">
+                                            <input type="hidden" name="notify_url" value="https://mb3admin.com/admin/service/services/ppipn.php">
                                             <input type="hidden" name="return" id="paypalReturnUrl" value="#">
                                             <button type="submit" id="ppButton" class="clearButton">
                                                 <paper-button raised class="block" style="background-color: #179BD7;color:#fff;">
