add back api keys

--- a/MediaBrowser.WebDashboard/dashboard-ui/advanced.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/advanced.html
@@ -12,6 +12,7 @@
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
                     <a href="#" data-role="button" class="ui-btn-active">${TabGeneral}</a>
                     <a href="dashboardhosting.html" data-role="button">${TabHosting}</a>
+                    <a href="serversecurity.html" data-role="button">${TabSecurity}</a>
                 </div>
                 <form class="advancedConfigurationForm">
 
